# code

xlog/: CMakeLists.txt  README.md.md  README_zh.md.md
xlog/benchmarks/: bench_logger.cpp
xlog/include/xlog/: async_worker.h  console_sink.h  file_sink.h  formatter.h  log_entry.h  log_level.h  logger.h  mpsc_queue.h  sink.h
xlog/src/: async_worker.cpp  file_sink.cpp  formatter.cpp  logger.cpp
xlog/tests/: test_logger.cpp  test_shutdown_integrity.cpp
